--- a/join-zt/action.yml
+++ b/join-zt/action.yml
@@ -1,5 +1,8 @@
 name: 'Join ZeroTier'
 description: 'Join a ZeroTier network as an authenticated node'
+branding:
+  color: orange
+  icon: arrow-up-circle
 inputs:
   network_id:
     description: 'The 16 character network ID of the network the new members should join.'
@@ -22,10 +25,10 @@ runs:
       shell: bash
     - run: install_zt.sh
       shell: bash
-#    - id: join-network
-#      run: join_network.sh
-#      env:
-#        network_id: ${{ inputs.network_id }}
-#        api_accesstoken: ${{ inputs.api_accesstoken }}
-#        api_url: ${{ inputs.api_url }}
-#      shell: bash
+    - id: join-network
+      run: join_network.sh
+      env:
+        NETWORK_ID: ${{ inputs.network_id }}
+        API_ACCESSTOKEN: ${{ inputs.api_accesstoken }}
+        API_URL: ${{ inputs.api_url }}
+      shell: bash
