--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Join ZeroTier network
         uses: ./join-zt
+        with:
+          network_id: ${{ secrets.ZEROTIER_NETWORK_ID }}
+          api_accesstoken: ${{ secrets.ZEROTIER_API_ACCESSTOKEN }}
       - name: Verify connectivity
         shell: bash
         run: test_connectivity.sh
