Attempt to find test-script with relative path

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,4 +22,4 @@ jobs:
           api_accesstoken: ${{ secrets.ZEROTIER_API_ACCESSTOKEN }}
       - name: Verify connectivity
         shell: bash
-        run: test_connectivity.sh
+        run: ./test_connectivity.sh
