Action to leave zerotier when done

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,3 +23,8 @@ jobs:
       - name: Verify connectivity
         shell: bash
         run: ./test_connectivity.sh
+      - name: Leave ZeroTier network
+        if: always()
+        uses: ./leave-zt
+        with:
+          network_id: ${{ secrets.ZEROTIER_NETWORK_ID }}
